game pig finished

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Project Front-end</h1>
-    <a href="./Guess My Number/index.html">Guess My Number</a>
+    <ul>
+        <li><a href="./Guess My Number">Guess My Number</a></li>
+        <li><a href="./Modal">Modal</a></li>
+        <li><a href="./Pig Game">Pig Game</a></li>
+    </ul>
 </body>
 </html>
